# MusicClassification

./: .gitignore  CMakeLists.txt  Mon Apr 17 16:14:33 CDT 2023_rawsamples.csv  Mon Apr 17 16:21:49 CDT 2023_rawsamples.csv  Mon Apr 17 16:52:52 CDT 2023_rawsamples.csv  Mon Apr 17 20:41:52 CDT 2023_rawsamples.csv  Mon Apr 17 20:41:55 CDT 2023_processed.csv  Mon Apr 17 20:53:29 CDT 2023_rawsamples.csv  Mon Apr 17 21:02:48 CDT 2023_rawsamples.csv  Mon Apr 17 21:04:35 CDT 2023_rawsamples.csv  Mon Apr 17 21:04:38 CDT 2023_processed.csv  Mon Apr 17 21:13:31 CDT 2023_rawsamples.csv  Mon Apr 17 21:40:11 CDT 2023_rawsamples.csv  README.md  SimplePitchDetection.ipynb  Tue Apr 18 21:42:55 CDT 2023_rawsamples.csv  Tue Apr 18 21:45:41 CDT 2023_rawsamples.csv  Tue Apr 18 21:45:44 CDT 2023_processed.csv  Tue Apr 18 22:03:41 CDT 2023_rawsamples.csv  Tue Apr 18 22:03:44 CDT 2023_processed.csv  Tue Apr 18 22:23:30 CDT 2023_rawsamples.csv  Tue Apr 18 22:25:26 CDT 2023_rawsamples.csv  Tue Apr 18 22:27:32 CDT 2023_rawsamples.csv  Tue Apr 18 22:27:35 CDT 2023_processed.csv  Tue Apr 18 22:57:30 CDT 2023_rawsamples.csv  Tue Apr 18 22:57:33 CDT 2023_processed.csv  Tue Apr 18 22:58:43 CDT 2023_rawsamples.csv  Tue Apr 18 22:59:54 CDT 2023_rawsamples.csv  Tue Apr 18 22:59:57 CDT 2023_processed.csv  Tue Apr 18 23:15:54 CDT 2023_rawsamples.csv  Wed Apr 12 00:04:26 CDT 2023_rawsamples.csv  Wed Apr 19 10:25:53 CDT 2023_processed.csv  Wed Apr 19 11:05:16 CDT 2023_rawsamples.csv  Wed Apr 19 11:05:19 CDT 2023_processed.csv  Wed_Apr_12_000429_CDT_2023_processed.csv  fbank_coefficients.csv  first_model_run_60.pth  milestone1_code.ipynb  mp4_to_wav.py  recurrent_neural_network.ipynb  (+7 more)
GTZAN/: README.md
OutputText/: .gitkeep
example/: CMakeLists.txt
example/basic_stft/: main.cpp  stft.cpp  stft.cu
example/basic_wav_to_array/: main.cpp  wav_to_arr.cpp
include/: CMakeLists.txt  dsp.h  dsp.pybind.h  matrix.h  matrix.pybind.h  wav.pybind.h  wavread.h
include/dsp/: dsp.h
include/dsp_pybind/: dsp.pybind.h
include/matrix_pybind/: matrix_pybind.h
include/wav_pybind/: wav.pybind.h
include/wavreader/: wavread.h
pybind_modules/: CMakeLists.txt  dsp.module.cu  dsp.pybind.cu  matrix.module.cpp  matrix.module.cu  matrix.pybind.cpp  wav.module.cpp  wav.pybind.cpp
python_testbenches/: cu_fft_test.py  cu_stft_test.py  matrix_test.py  wav_test.py
src/: CMakeLists.txt  dsp.cpp  dsp.cu  dsp.pybind.cu  dsp_pybind.pybind.cpp  matrix.cpp  matrix.pybind.cpp  wav.pybind.cpp  wavread.cpp
